WIP: checkin beore dinner